<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/side_nav_bar">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hintText"
            />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hintText"/>

        <!--<Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:layout_margin="10dp"/>-->

        <android.support.v7.widget.CardView
            android:id="@+id/btn_login"
            android:layout_width="130dp"
            android:layout_height="60dp"
            card_view:cardCornerRadius="20dp"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="#ffffff"
            android:layout_gravity="center"
            card_view:cardElevation="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tv_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forget_password_q"
            android:layout_margin="50dp"
            android:textColor="@android:color/white"/>


</LinearLayout>